[gd_scene load_steps=3 format=3 uid="uid://dmasf4uhgm1x8"]

[ext_resource type="Script" path="res://scenes/systems/furnace/furnace.gd" id="1_c8uos"]
[ext_resource type="Texture2D" uid="uid://dkmsxfnm2ad7s" path="res://assets/textures/ui/menu/bg_darkener.png" id="1_nqw3x"]

[node name="Furnace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8uos")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nqw3x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="FurnaceContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RecipeContainer" type="VBoxContainer" parent="MarginContainer/FurnaceContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/FurnaceContainer/RecipeContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="SortButton" type="Button" parent="MarginContainer/FurnaceContainer/RecipeContainer/ButtonContainer"]
layout_mode = 2
text = "Sort"

[node name="FilterButton" type="Button" parent="MarginContainer/FurnaceContainer/RecipeContainer/ButtonContainer"]
layout_mode = 2
text = "Filter"

[node name="RecipeList" type="ItemList" parent="MarginContainer/FurnaceContainer/RecipeContainer"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryContainer" type="VBoxContainer" parent="MarginContainer/FurnaceContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="InventoryList" type="ItemList" parent="MarginContainer/FurnaceContainer/InventoryContainer"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="MarginContainer/FurnaceContainer/InventoryContainer"]
layout_mode = 2
text = "Smelt"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 46.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "x"
